Fix menu for smaller screens and customize scrollbar

--- a/src/profile.css
+++ b/src/profile.css
@@ -171,6 +171,13 @@ body {
 
 @media (max-width: 680px) {
 
+  .nav-links {
+    gap: 0.5rem;
+  }
+
+  .nav-links button {
+    font-size: 0.9rem;
+  }
 
   .content-wrapper {
     max-width: 1200px;
@@ -204,4 +211,18 @@ body {
     width: 100px;
     height: 130px;
   }
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #646cff;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #4548c0;
 }
